# satellite

./: .gitignore  Cargo.toml  README.md  Rocket.toml  Satellite.toml  satellite.sqlite
context_builder/: Cargo.toml
context_builder/src/: context_builder.rs  lib.rs  meta.rs  metadata.rs  nav.rs  navigation.rs
migrations/2017-10-05-114015_create_posts/: up.sql
satellite_core/: Cargo.toml
satellite_core/src/: context_builder.rs  lib.rs  metadata.rs  navigation.rs  routes.rs  template_builder.rs
satellite_core/src/routes/: backend.rs  errors.rs  frontend.rs  mod.rs
src/: main.rs  request.rs  response.rs
src/controllers/: posts.rs
src/db/: mod.rs  models.rs
src/forms/: mod.rs  posts.rs
src/routes/: errors.rs  frontend.rs  mod.rs
static/: blog.css
templates/: alert.html.hbs  index.html.hbs  link.html.hbs  macros.html.tera  print_context.html.tera
templates/frontend/: 404.html.hbs  404.html.tera  base.html.hbs  base.html.tera  create.html.hbs  create.html.tera  index.html.hbs  index.html.tera  post.html.tera
templates/frontend/partials/: flash.html.hbs  flash.html.tera  footer.html.hbs  head.html.hbs  head.html.tera  header.html.hbs  header.html.tera  sidebar.html.hbs  sidebar.html.tera
