[workspace]
members = [
    "context_builder/",
]

[package]
name = "satellite"
version = "0.1.0"
authors = ["Matthias Seiffert <lythenas@hotmail.de>"]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_derive = "1.0"

context_builder = { path = "context_builder/" }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]