[workspace]
members = [
    "context_builder/",
]

[package]
name = "satellite"
version = "0.1.0"
authors = ["Matthias Seiffert <lythenas@hotmail.de>"]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "0.16.0", features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
chrono = { version = "*", features = ["serde"] }
dotenv = "0.10"
pulldown-cmark = "0.1"
maplit = "1.0"

context_builder = { path = "context_builder/" }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]