[package]
name = "context_builder"
version = "0.1.0"
authors = ["Matthias Seiffert <lythenas@hotmail.de>"]

[dependencies]
rocket = "0.3.2"
serde = "1.0"
serde_derive = "1.0"
regex = "0.2"

[dev-dependencies]
rocket_codegen = "0.3.2"

[dev-dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]